# IceCraft

./: .gitignore  CMakeLists.txt
assets/textures/: texture_list.txt
assets/worlds/: ice_world.s  lobby.s
include/IceCraft/: block.h  block_selector.h  block_vertex.h  bote.h  camera.h  chunk.h  coordinate_axes.h  gui_block_selector.h  gui_block_selector_vertex.h  gui_crossbar.h  gui_crossbar_vertex.h  helper_funcs.h  hud.h  hud_vertex.h  ice_craft.h  input_handler.h  line_vertex.h  opengl_utils.h  player.h  point_cloud.h  point_vertex.h  texture_atlas.h  world.h
shaders/: block_vertex_shader.glsl  coord_axes_vertex_shader.glsl
shaders/coord_axes/: fragment_shader.glsl
shaders/hud/: vertex_shader.glsl
shaders/world/: fragment_shader.glsl
src/: block.c  bote.c  camera.c  chunk.c  coordinate_axes.c  gui_block_selector.c  gui_crossbar.c  helper_funcs.c  hud.c  ice_craft.c  ice_server.py  input_handler.c  main.c  opengl_utils.c  player.c  texture_atlas.c  world.c
